k8s-maesh/deployment/deployment.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    apps: web-based
  annotations:
    type: demo
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: test
spec:
  selector:
    matchLabels:
      app: hello
  replicas: 3
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello
          image: kek112/flaskapp
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /ready
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: test
  labels:
    app: hello
  annotations:
    maesh.containo.us/traffic-type: "http"
spec:
  ports:
    - name: web
      port: 30000
      targetPort: 5000
  selector:
    app: hello
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: flaskapphello
  namespace: test
spec:
  rules:
    - host: flask.app
      http:
        paths:
          - path: /
            backend:
              serviceName: hello
              servicePort: 30000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: world
  namespace: test
spec:
  selector:
    matchLabels:
      app: world
  replicas: 3
  template:
    metadata:
      labels:
        app: world
    spec:
      containers:
        - name: world
          image: kek112/flaskapp
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /ready
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: world
  namespace: test
  labels:
    app: world
  annotations:
    maesh.containo.us/traffic-type: "http"
spec:
  ports:
    - port: 30001
      targetPort: 5000
  selector:
    app: world
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: world2
  namespace: test
spec:
  selector:
    matchLabels:
      app: world2
  replicas: 3
  template:
    metadata:
      labels:
        app: world2
    spec:
      containers:
        - name: world2
          image: kek112/flaskapp
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /ready
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  name: world2
  namespace: test
  labels:
    app: world2
  annotations:
    maesh.containo.us/traffic-type: "http"
spec:
  ports:
    - port: 30002
      targetPort: 5000
  selector:
    app: world2
---
